--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,14 @@ dependencies {
     //Lottie
     implementation "com.airbnb.android:lottie-compose:6.0.0"
 
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
 
+    implementation 'androidx.biometric:biometric:1.1.0'
+
+    // Pager and Indicators - Accompanist
+    implementation "com.google.accompanist:accompanist-pager:0.24.2-alpha"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.24.2-alpha"
+
+    implementation("androidx.datastore:datastore-preferences:1.0.0")
 
 }
