--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KeySafe"
+        android:name=".di.KeySafeApp"
+        android:theme="@style/Theme.CustomSplashScreen"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".app.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KeySafe">
+            android:theme="@style/Theme.CustomSplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
