--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,9 @@ android {
     defaultConfig {
         applicationId "com.nextsolutions.keyysafe"
         minSdk 26
-        targetSdk 33
-        versionCode 2
-        versionName "1.0.1"
+        targetSdk 34
+        versionCode 5
+        versionName "1.0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -187,6 +187,9 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     implementation "me.saket.swipe:swipe:1.2.0"
+
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+
 
 
 }
